SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>저자</label>
    <length>80</length>
    <type>Text</type>
</CustomField>