SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/BookNo__c.field-meta.xml
<CustomField>
    <fullName>BookNo__c</fullName>
    <label>도서 번호</label>
    <length>80</length>
    <type>Text</type>
</CustomField>