SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/IsLent__c.field-meta.xml
<CustomField>
    <fullName>IsLent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>대여 유무</label>
    <type>Checkbox</type>
</CustomField>