SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>대여자</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>도서</relationshipLabel>
    <relationshipName>Lender_Book_Rel</relationshipName>
    <type>Lookup</type>
</CustomField>