SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/LenderName__c.field-meta.xml
<CustomField>
    <fullName>LenderName__c</fullName>
    <label>대여자 이름</label>
    <length>80</length>
    <type>Text</type>
</CustomField>