SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Book__c/fields/LentDate__c.field-meta.xml
<CustomField>
    <fullName>LentDate__c</fullName>
    <label>대여일</label>
    <type>Date</type>
</CustomField>